Bug 309180 - SIP advanced configuration: 'Transport' is always reset to 'auto'
Summary: SIP advanced configuration: 'Transport' is always reset to 'auto'
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-29 00:48 UTC by Elias Probst
Modified: 2012-10-29 07:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2012-10-29 00:48:09 UTC
When setting a custom transport in the advanced configuration dialog of a SIP account, the transport is always reset to 'auto' when opening the dialog the next time.

Reproducible: Always
Comment 1 Elias Probst 2012-10-29 01:05:38 UTC
It looks like the setting makes its way into ~/.mission-control/accounts/accounts.cfg, but the dialog fails to show the corresponding value.

I have "param-transport=udp" in the config file, but the dialog keeps showing 'auto'.
Comment 2 Daniele E. Domenichelli 2012-10-29 07:57:31 UTC
Git commit fd55fd4156bf15f6cde961061a77f98a24c58eb7 by Daniele E. Domenichelli.
Committed on 29/10/2012 at 08:55.
Pushed by ddomenichelli into branch 'kde-telepathy-0.5'.

Update combo box values in rakia plugin
FIXED-IN: 0.5.2

M  +10   -0    plugins/rakia/rakia-advanced-options-widget.cpp

http://commits.kde.org/telepathy-accounts-kcm/fd55fd4156bf15f6cde961061a77f98a24c58eb7