Update combo box values in rakia plugin

BUG: 309180
FIXED-IN: 0.5.2